completed handlePlayerMove() function

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     
 
     <h1>Tic-Tac-Toe</h1>
+    <h2 class="playerTurn">Xs turn</h2>
     <div class="container">
         <div class="game">
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
+            <button data-index="0" class="btn"></button>
+            <button data-index="1" class="btn"></button>
+            <button data-index="2" class="btn"></button>
+            <button data-index="3" class="btn"></button>
+            <button data-index="4" class="btn"></button>
+            <button data-index="5" class="btn"></button>
+            <button data-index="6" class="btn"></button>
+            <button data-index="7" class="btn"></button>
+            <button data-index="8" class="btn"></button>
         </div>
     </div>
     
