completed checkWin function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 
     <h1>Tic-Tac-Toe</h1>
-    <h2 class="playerTurn">Xs turn</h2>
+    <h2 class="playerTurn"></h2>
     <div class="container">
         <div class="game">
             <button data-index="0" class="btn"></button>
